feat: header component

--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Host+Grotesk&display=swap");
+
 @import "tailwindcss";
+
+@layer base {
+    html {
+        font-family: "Host Grotesk", sans-serif;
+    }
+}
 
 @theme {
     --color-primary: #222831;
